Replace `Collectors.toList()` with `Stream.toList()`