@@ -12,7 +12,6 @@ package org.junit.jupiter.params.provider;
 
 import static java.lang.String.format;
 import static java.util.Arrays.stream;
-import static java.util.stream.Collectors.toList;
 import static org.junit.platform.commons.support.AnnotationSupport.isAnnotated;
 import static org.junit.platform.commons.util.CollectionUtils.isConvertibleToStream;
 
@@ -154,7 +153,7 @@ class MethodArgumentsProvider extends AnnotationBasedArgumentsProvider<MethodSou
 				&& !candidate.equals(testMethod.orElse(null));
 		List<Method> candidates = ReflectionUtils.findMethods(clazz, isCandidate);
 
-		List<Method> factoryMethods = candidates.stream().filter(isFactoryMethod).collect(toList());
+		List<Method> factoryMethods = candidates.stream().filter(isFactoryMethod).toList();
 
 		Preconditions.notEmpty(factoryMethods, () -> {
 			if (candidates.isEmpty()) {
